# sentient

./: .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  debug_imports.py  npc_brain.py  package-lock.json  pyproject.toml  run_rag.py  search_modules.py  test_chain.py  verify_submission.py
.streamlit/: config.toml
data/: lore.txt
data/faiss_index/: index.faiss  index.pkl
docs/superpowers/specs/: 2026-06-17-google-gemini-provider-migration-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/assets/: App-Co2uCHc2.js  index-DmmFX2Oy.js  index-RmcxV3A2.css
frontend/src/: App.tsx  index.css  main.tsx  theme.tsx
frontend/src/components/chat/: chat-container.tsx  chat-input.tsx  chat-message.tsx  index.ts
frontend/src/components/layout/: header.tsx
frontend/src/components/settings/: settings-dialog.tsx
frontend/src/components/sidebar/: app-sidebar.tsx  index.ts  source-item.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  textarea.tsx
frontend/src/hooks/: index.ts  use-chat.ts  use-settings.ts  use-sources.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
logic/: chat_store.py  config.py  ingestion.py  openai_adapter.py  persona.py  rag_engine.py  sqlite_chat_store.py
supabase/: chat_sessions.sql
tests/: test_rag_pipeline.py
