[project]
name = "sentient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu",
    "fastapi>=0.128.0",
    "langchain<1.0.0",
    "langchain-community",
    "langchain-huggingface",
    "langchain-openai",
    "pypdf",
    "python-dotenv",
    "python-multipart>=0.0.21",
    "sentence-transformers>=5.2.0",
    "streamlit",
    "uvicorn>=0.40.0",
]
